@@ -24,7 +24,7 @@
 #define HAVE_CRYPT 1
 #define PHP_STD_DES_CRYPT 1
 #define PHP_EXT_DES_CRYPT 0
-#define PHP_MD5_CRYPT 0
+#define PHP_MD5_CRYPT 1
 #define PHP_BLOWFISH_CRYPT 0
 
 /* Enable / Disable CALENDAR extension (default: enabled) */
